# pngcrushed

./: .gitignore  AUTHORS  ChangeLog  GRP_TODO.md  LICENSE  Makefile  Makefile-nolib  Makefile.am  Makefile.in  NEWS  README.md  configure.ac  deflate.c  png.c  pngconf.h  pngcrush_ChangeLog.html  pngcrushed.c  pngcrushed.h  pnglibconf.h  sonar-project.properties
.github/workflows/: codeql.yml  flawfinder.yml  sonarcloud.yml
scripts/: Makefile-nolib
